--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -8,11 +8,11 @@ jobs:
     name: Test and Lint
     runs-on: ubuntu-22.04
     steps:
-#      - name: Login to Docker Hub #human-readable name given to the 1st step in this job
-#        uses: docker/login-action@v1 #re-uses an existing action. this particular one is to log in the user. '@v1' refers to version 1 of this action
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USER }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to Docker Hub #human-readable name given to the 1st step in this job
+        uses: docker/login-action@v1 #re-uses an existing action. this particular one is to log in the user. '@v1' refers to version 1 of this action
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Test
