--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,9 @@ services:
       sh -c "python manage.py runserver 0.0.0.0:8000"
 
 # "docker-compose" is replaced by "docker compose" which is made available via "docker-compose-plugin" package that gets bundled with Docker Desktop.
+
 # build image using this command (after cd'ing into the project's root dir):
 #   docker compose build
+
+#run the server using:
+#  docker compose up
